nowrap tags; fix cursor issue in ssv

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -114,6 +114,7 @@ button {
 a.reference {
     color: var(--hl2-col);
     text-decoration: none;
+    white-space: nowrap;
 }
 
 #hoot {
